--- a/hiearth/Cargo.toml
+++ b/hiearth/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rltk = { version = "0.8.7" }
+rltk = { git = "https://github.com/amethyst/bracket-lib.git" }
 specs = "0.16.1"
 specs-derive = "0.4.1"
