most of game engine finished, work up through section 2

--- a/hiearth/Cargo.toml
+++ b/hiearth/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rltk = { git = "https://github.com/amethyst/bracket-lib.git" }
-specs = "0.16.1"
+rltk = { git = "https://github.com/amethyst/bracket-lib.git", features = ["serde"] }
+specs = { version = "0.16.1", features = ["serde"] }
 specs-derive = "0.4.1"
+serde = { version = "1.0.189", features = ["derive"] }
+serde_json = "1.0.39"
