--- a/wild-thyme/Cargo.toml
+++ b/wild-thyme/Cargo.toml
@@ -12,3 +12,4 @@ specs = { version = "0.16.1", features = ["serde"] }
 specs-derive = "0.4.1"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.39"
+wasm-bindgen = "0.2.89"
