--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -18,6 +18,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --release --target=wasm32-unknown-unknown
+      run: rustup target add wasm32-unknown-unknown && cargo build --release --target=wasm32-unknown-unknown
     - name: Run tests
       run: cargo test --verbose
