--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -34,6 +34,7 @@ jobs:
         path: |
           wasm
   build-web:
+    needs: build-game
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -55,6 +56,7 @@ jobs:
         path: |
           dist
   publish:
+    needs: build-web
     runs-on: ubuntu-latest
     defaults:
       run:
