--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -23,10 +23,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install tools
       run: rustup target add wasm32-unknown-unknown && cargo install wasm-bindgen-cli
+    - uses: Swatinem/rust-cache@v2
     - name: Run tests
       run: cargo test --verbose
     - name: Build
-      run: cargo build --release --target=wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir ./wasm --no-modules
+      run: cargo build --release --target=wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
     - name: Archive wasm
       uses: actions/upload-artifact@v3
       with:
