--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -27,11 +27,14 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Build
-      run: cargo build --release --target=wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
+      run: cargo build --release --target=wasm32-unknown-unknown
+    - name: Generate JS bindings
+      run: wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
     - name: Archive wasm
       uses: actions/upload-artifact@v3
       with:
         name: wasm-build
+        if-no-files-found: warn
         path: |
           wasm
   build-web:
