--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -1,4 +1,4 @@
-name: Game
+name: Build, Test, and Publish
 
 on:
   push:
@@ -21,22 +21,29 @@ jobs:
         working-directory: ./wild-thyme
     steps:
     - uses: actions/checkout@v3
-    - name: Install tools
-      run: rustup target add wasm32-unknown-unknown && cargo install wasm-bindgen-cli
+    - name: Cache Rust toolchain
+      uses: actions/cache@v3
+      with:
+        path: ~/.rustup
+        key: toolchain-wasm32-unknown-unknown
+    - if: ${{ steps.cache-rustup.outputs.cache-hit != 'true' }}
+    - name: Install toolchain
+      run: rustup target add wasm32-unknown-unknown
     - uses: Swatinem/rust-cache@v2
+    - name: Install wasm-bindgen
+      run: cargo install wasm-bindgen-cli
     - name: Run tests
       run: cargo test --verbose
     - name: Build
       run: cargo build --release --target=wasm32-unknown-unknown
     - name: Generate JS bindings
       run: wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
+      run: ls ; ls target/wasm32-unknown-unknown/release ; ls wasm
     - name: Archive wasm
       uses: actions/upload-artifact@v3
       with:
         name: wasm-build
-        if-no-files-found: warn
-        path: |
-          wasm
+        path: wasm
   build-web:
     needs: build-game
     runs-on: ubuntu-latest
