--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -38,6 +38,7 @@ jobs:
       run: cargo build --release --target=wasm32-unknown-unknown
     - name: Generate JS bindings
       run: wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
+    - name: debugging
       run: ls ; ls target/wasm32-unknown-unknown/release ; ls wasm
     - name: Archive wasm
       uses: actions/upload-artifact@v3
@@ -64,8 +65,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: web-build
-        path: |
-          dist
+        path: dist
   publish:
     needs: build-web
     runs-on: ubuntu-latest
