--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -27,7 +27,7 @@ jobs:
         path: ~/.rustup
         key: toolchain-wasm32-unknown-unknown
     - if: ${{ steps.cache-rustup.outputs.cache-hit != 'true' }}
-    - name: Install toolchain
+      name: Install toolchain
       run: rustup target add wasm32-unknown-unknown
     - uses: Swatinem/rust-cache@v2
     - name: Install wasm-bindgen
@@ -38,7 +38,6 @@ jobs:
       run: cargo build --release --target=wasm32-unknown-unknown
     - name: Generate JS bindings
       run: wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
-    - name: debugging
       run: ls ; ls target/wasm32-unknown-unknown/release ; ls wasm
     - name: Archive wasm
       uses: actions/upload-artifact@v3
