--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -38,6 +38,7 @@ jobs:
       run: cargo build --release --target=wasm32-unknown-unknown
     - name: Generate JS bindings
       run: wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
+    - name: Debug info
       run: ls ; ls target/wasm32-unknown-unknown/release ; ls wasm
     - name: Archive wasm
       uses: actions/upload-artifact@v3
