--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -39,12 +39,12 @@ jobs:
     - name: Generate JS bindings
       run: wasm-bindgen target/wasm32-unknown-unknown/release/and_we_had_a_wild_thyme.wasm --out-dir wasm --no-modules
     - name: Debug info
-      run: ls ; ls target/wasm32-unknown-unknown/release ; ls wasm
+      run: ls ; echo ; ls target/wasm32-unknown-unknown/release ; echo ; ls wasm
     - name: Archive wasm
       uses: actions/upload-artifact@v3
       with:
         name: wasm-build
-        path: wasm
+        path: wasm/*
   build-web:
     needs: build-game
     runs-on: ubuntu-latest
