learning project btw

--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -19,6 +19,7 @@ jobs:
     defaults:
       run:
         working-directory: ./wild-thyme
+    steps:
     - name: Run tests
       run: cargo test --verbose
   build-game:
