--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -20,6 +20,7 @@ jobs:
       run:
         working-directory: ./wild-thyme
     steps:
+    - uses: actions/checkout@v3
     - name: Run tests
       run: cargo test --verbose
   build-game:
@@ -50,7 +51,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: wasm-build
-        path: wasm
+        path: wild-thyme/wasm
   build-web:
     needs: build-game
     runs-on: ubuntu-latest
