add Cloudfront invalidation step and secrets

--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -98,4 +98,6 @@ jobs:
     - name: Debug workflow
       run: pwd;echo;ls -al;
     - name: Publish to S3
-      run: aws s3 sync --delete . s3://wild-thyme
+      run: aws s3 sync --delete . ${{ AWS_WILD_THYME_S3BUCKET }}
+    - name: Add Cloudfront invalidation
+      run: aws cloudfront create-invalidation --distribution-id ${{ AWS_WILD_THYME_CLOUDFRONT_ID }} --paths "/*" --no-cli-pager
