--- a/.github/workflows/game.yml
+++ b/.github/workflows/game.yml
@@ -67,8 +67,8 @@ jobs:
         path: delightful-thyme/wild-thyme
     - name: Install
       run: bun install
-    - name: Copy wasm
-      run: cp wild-thyme/*.wasm public
+    - name: Copy wasm and built js
+      run: cp wild-thyme/*.wasm public && cp wild-thyme/*.js public
     - name: Build
       run: bun run build
     - name: Debug workflow
