--- a/wild-thyme/Cargo.toml
+++ b/wild-thyme/Cargo.toml
@@ -13,3 +13,4 @@ specs-derive = "0.4.1"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.39"
 wasm-bindgen = "0.2.89"
+serde-wasm-bindgen = "0.4"
